[gd_scene load_steps=5 format=3 uid="uid://isd3o7ji1m5j"]

[ext_resource type="Script" path="res://Scripts/Track.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cbowhq83f53iy" path="res://Scenes/components/track_visual_component.tscn" id="3_i8u01"]
[ext_resource type="PackedScene" uid="uid://dmtyta68uolwr" path="res://Scenes/TrackJunction.tscn" id="7"]

[sub_resource type="Curve2D" id="1"]
resource_local_to_scene = true
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 192, 0)
}
point_count = 2

[node name="Track" type="Path2D"]
curve = SubResource("1")
script = ExtResource("1")

[node name="HeadPoint" type="PathFollow2D" parent="."]
z_index = 3
z_as_relative = false
loop = false

[node name="TrackJunction" parent="HeadPoint" instance=ExtResource("7")]
parent = NodePath("../..")
side = "head"

[node name="TailPoint" type="PathFollow2D" parent="."]
z_index = 3
z_as_relative = false
position = Vector2(192, 0)
progress = 192.0
loop = false

[node name="TrackJunction" parent="TailPoint" instance=ExtResource("7")]
parent = NodePath("../..")
side = "tail"

[node name="TrackVisualComponent" parent="." instance=ExtResource("3_i8u01")]
points = PackedVector2Array(0, 0, 2.15625, 0, 4.74609, 0, 8.25, 0, 12.5977, 0, 15.0659, 0, 17.7188, 0, 20.5474, 0, 23.543, 0, 26.6968, 0, 30, 0, 33.4438, 0, 37.0195, 0, 40.7183, 0, 44.5312, 0, 48.4497, 0, 52.4648, 0, 56.5679, 0, 60.75, 0, 65.0024, 0, 69.3164, 0, 73.6831, 0, 78.0938, 0, 82.5396, 0, 87.0117, 0, 91.5015, 0, 96, 0, 100.499, 0, 104.988, 0, 109.46, 0, 113.906, 0, 118.317, 0, 122.684, 0, 126.998, 0, 131.25, 0, 135.432, 0, 139.535, 0, 143.55, 0, 147.469, 0, 151.282, 0, 154.98, 0, 158.556, 0, 162, 0, 165.303, 0, 168.457, 0, 171.453, 0, 174.281, 0, 176.934, 0, 179.402, 0, 183.75, 0, 187.254, 0, 189.844, 0, 192, 0)

[connection signal="points_changed" from="." to="TrackVisualComponent" method="_on_track_points_changed"]
